Fix divider overflowing onto posts

--- a/src/styles/content/special-pages.scss
+++ b/src/styles/content/special-pages.scss
@@ -6,6 +6,9 @@
   .search_query {
     font-weight: bold;
   }
+  span.divider {
+    bottom: 0em;
+  }
 }
 #tagline {
   font-style: italic;
